# llm-wiki

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llm-wiki.yaml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: test.yml
docs/: LLM_CONFIGURATION.md
examples/: process_with_claude.py  process_with_ollama.py  process_with_openai.py
src/llm_wiki/: __init__.py  cli.py  core.py  llm.py  obsidian.py
tests/: test_core.py
